@@ -1,3 +1,8 @@
+2013-11-07  Carl Hetherington  <cth@carlh.net>
+
+	* Open file dialog starts in the configured DCP directory,
+	if one exists (#70).
+
 2013-11-06  Carl Hetherington  <cth@carlh.net>
 
 	* Support pixel format 30 (#254).
